crates/hpc-core/tests/compile-fail/api_double_write.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/api_double_write.rs
  |
  |     let _still_ready = q.wait(ev, ready_again);
  |                          ----     ^^^^^^^^^^^ expected `DeviceBuffer<_, InFlight>`, found `DeviceBuffer<u32, Ready>`
  |                          |
  |                          arguments to this method are incorrect
  |
  = note: expected struct `DeviceBuffer<_, InFlight>`
             found struct `DeviceBuffer<u32, hpc_core::Ready>`
note: method defined here
 --> src/api.rs
  |
  |     pub fn wait<T>(
  |            ^^^^
